poprawki 1 do zad dom

--- a/SASS/components/_company-features.scss
+++ b/SASS/components/_company-features.scss
@@ -19,7 +19,7 @@
   }
   &__image {
     box-sizing: border-box;
-    background-color: getColor("background-ligt-grey");
+    background-color: getColor("background-light-grey");
     border-radius: 4px;
     padding: 25px 100px;
   }
