--- a/SASS/components/_portfolio-buttons.scss
+++ b/SASS/components/_portfolio-buttons.scss
@@ -8,7 +8,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
-    background-color: getColor("background-ligt-grey");
+    background-color: getColor("background-light-grey");
     cursor: pointer;
     border-radius: 4px;
     border: 0px;
