--- a/SASS/components/_workers.scss
+++ b/SASS/components/_workers.scss
@@ -1,5 +1,5 @@
 .worker {
-  background-color: getColor("background-ligt-grey");
+  background-color: getColor("background-light-grey");
   &__specyfication {
     background-color: getColor("white");
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
