--- a/SASS/utils/_vars.scss
+++ b/SASS/utils/_vars.scss
@@ -4,7 +4,7 @@ $colors: (
   "blue": #2196f3,
   "white": #ffffff,
   "dark-background": #2f303a,
-  "background-ligt-grey": #f5f4fa,
+  "background-light-grey": #f5f4fa,
   "maintext": #212121,
   "text": #757575,
 );
