--- a/SASS/components/_form.scss
+++ b/SASS/components/_form.scss
@@ -24,67 +24,69 @@
     padding-bottom: 10px;
     padding-top: 10px;
   }
-}
 
-.form-item {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-  position: relative;
-  &__title {
-    color: #757575;
+  &__item {
     display: flex;
-    justify-content: flex-start;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
-  }
-  &__input {
-    width: 100%;
-    height: 40px;
-    padding-left: 36px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    outline: none;
-    transition: $transitionBorder;
-    &:focus,
-    &:hover {
-      border-color: getColor("blue");
+    flex-direction: column;
+    gap: 4px;
+    position: relative;
+
+    &-title {
+      color: #757575;
+      display: flex;
+      justify-content: flex-start;
+      font-size: 12px;
+      line-height: 1.17;
+      letter-spacing: 0.01em;
     }
-    &:focus + svg,
-    &:hover + svg {
-      fill: getColor("blue");
+    &-input {
+      width: 100%;
+      height: 40px;
+      padding-left: 36px;
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      border-radius: 4px;
+      outline: none;
+      transition: $transitionBorder;
+      &:focus,
+      &:hover {
+        border-color: getColor("blue");
+      }
+      &:focus + svg,
+      &:hover + svg {
+        fill: getColor("blue");
+      }
     }
-  }
-  &__icon {
-    position: absolute;
-    display: flex;
-    justify-content: flex-start;
-    margin-right: 418px;
-    left: 12px;
-    top: 29px;
-    width: 18px;
-    height: 18px;
-    fill: getColor("maintext");
-    transition: $transitionFill;
-  }
-  &__textarea {
-    resize: none;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    display: flex;
-    padding: 12px 16px;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
-    transition: $transitionBorder;
-    outline: none;
-    &:focus,
-    &:hover {
-      border-color: getColor("blue");
+    &-icon {
+      position: absolute;
+      display: flex;
+      justify-content: flex-start;
+      margin-right: 418px;
+      left: 12px;
+      top: 29px;
+      width: 18px;
+      height: 18px;
+      fill: getColor("maintext");
+      transition: $transitionFill;
     }
-    &:focus-within {
-      border-color: getColor("blue");
+
+    &-textarea {
+      resize: none;
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      border-radius: 4px;
+      display: flex;
+      padding: 12px 16px;
+      font-size: 12px;
+      line-height: 1.17;
+      letter-spacing: 0.01em;
+      transition: $transitionBorder;
+      outline: none;
+      &:focus,
+      &:hover {
+        border-color: getColor("blue");
+      }
+      &:focus-within {
+        border-color: getColor("blue");
+      }
     }
   }
 }
