--- a/SASS/components/_overlay.scss
+++ b/SASS/components/_overlay.scss
@@ -6,11 +6,11 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
     cursor: pointer;
-  }
 
-  &:hover &__overlay,
-  &:focus &__overlay {
-    transform: translateY(0);
+    & .portfolio-item-box__overlay,
+    & .portfolio-item-box__overlay {
+      transform: translateY(0);
+    }
   }
 
   &__image {
